--- a/src/app/people-list/people-list.component.html
+++ b/src/app/people-list/people-list.component.html
@@ -3,11 +3,11 @@
     </section>
     <!-- this is the new syntax for ng-repeat -->
     <ul>
-      <li *ngFor="let person of people">
+      <li *ngFor="let person of people, let i = index">
         <a [routerLink]="['/persons', person.id]">
           {{person.name}} 
         </a>
-        <button class="btn btn-danger" (click)="delete(person); $event.stopPropagation()"> Delete </button> 
+        <button class="btn btn-danger" (click)="delete(person, i); $event.stopPropagation()"> Delete </button> 
       </li>
     </ul>
     <!-- HERE: added this error message -->
